2005-09-17  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am: Moved m4 subdirectory to admin where it belongs.

	* admin/m4/alut_c__attribute.m4, admin/m4/alut_check_func.m4:
	Added.

	* m4/alut_c__attribute.m4, m4/alut_check_func.m4: Removed.

	* src/Makefile.am: Fixed headers.

	* .cvsignore: Ignore distribution archives.

2005-09-14  Sven Panne  <sven.panne@aedion.de>

	* src/alutError.c, src/alutInit.c, src/alutLoader.c,
	src/alutUtil.c, src/alutVersion.c, src/alutWaveform.c: Use
	alutInternal.h.

	* src/alutInternal.h: Added. This file should be #included as the
	first header in all *.c files.

	* src/alutError.h, src/alutInit.h: Removed

	* Makefile.am, examples/Makefile.am, src/Makefile.am,
	test_suite/Makefile.am: Automatically build examples and test
	suite now. Moved local autoconf macros to a separate
	directory. Added a few comments.

	* m4/alut_c__attribute.m4, m4/alut_check_func.m4: Added.

	* acinclude.m4: Removed

2005-09-13  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/alutLoader.c, src/alutWaveform.c: A few
	compatibility hacks to make it compile on Linux, MinGW/MSYS and
	Cygwin.

	* acinclude.m4: Added.

2005-09-12  Sven Panne  <sven.panne@aedion.de>

	* admin/.cvsignore: Improved ignorance.

	* src/Makefile.am: Cleaned up and fixed include paths. Added
	-no-undefined to libtool linker flags to prepare for building a
	Windows DLL. Added some comments.

2005-09-11  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/alutWaveform.c: Cleaned up
	alutCreateBufferWaveform.

	* configure.ac, src/alutInit.c: Header cleanup.

	* src/alutUtil.c: Fixed braino in alutMicroSleep using nanosleep.

	* src/alutInit.c: _alutSanityCheck doesn't terminate the program
	in case of an error anymore, it simply sets the error
	condition. Some additional cleanup.

	* src/alutError.c: Print a message to stderr when an error
	condition is set and the ALUT_DEBUG environment variable is
	defined.
